overflow-x: hidden -> this should prevent horizontal scroll on mobile

--- a/src/BlazorApp/wwwroot/css/app.css
+++ b/src/BlazorApp/wwwroot/css/app.css
@@ -10,9 +10,9 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  max-width: 100%;
+  overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
-}
+}dotnet 
 
 div#main {
   display: flex;
